<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">SpbReporter</string>
    <string name="image_type">image/png</string>
    <string name="ok">OK</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_dialog">Sort By:</string>
    <string name="stats_error_title">Error: No available data</string>
    <string name="stats_error_message">To be able to see statistics, you must set preferences and download sufficient data</string>
    <string name="refresh_error_title">Error: Required parameters are missing</string>
    <string name="refresh_error_message">To enable instant updates, please set the Host URL/Time Span.</string>
    <string name="empty_message">There are currently no workflows that are</string>

    <string-array name="sorting_method_types">
        <item>By Date</item>
        <item>By Workflow</item>
        <item>By Sample</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="stats">Statistics</string>
    <string name="action_update">Update</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="pref_summaryScope">Time Range</string>
    <string name="pref_summaryScope_short">Time Range</string>
    <string name="pref_summaryScope_default">Define the time range for the report</string>
    <string-array name="pref_summaryScope_entries">
        <item>week</item>
        <item>month</item>
        <item>year</item>
        <item>decade</item>
    </string-array>

    <string name="pref_automaticUpdates">Automatic Updates</string>
    <string name="pref_automaticUpdates_short">Updates</string>
    <string name="pref_automaticUpdates_default">Off</string>
    <string-array name="pref_automaticUpdates_entries">
        <item>Off</item>
        <item>5 min</item>
        <item>15 min</item>
        <item>60 min</item>
    </string-array>

    
    <string name="pref_notificationSettings">Notification Settings</string>
    <string name="pref_notificationSettings_short">Alerts</string>
    <string name="pref_notificationSettings_default">Web Updates</string>
    <string-array name="pref_notificationSettings_entries">
        <item>Off</item>
        <item>Web Updates</item>
        <item>Critical Updates</item>
    </string-array>

    <string name="pref_hostName">Host URL</string>
    <string name="pref_hostName_default">Specify host name for updates</string>
       
    <string name="url_invalid">This URL is not valid!</string>
    <string name="authority">ca.on.oicr.pde.seqprodprovider</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Sample or Workflow</string>
    <string name="title_workflowstats">Workflow Statistics</string>
</resources>
