<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
   <ListPreference
        android:dependency="pref_hostName"
        android:key="pref_syncFreq"
        android:title="@string/pref_automaticUpdates"
        android:dialogTitle="@string/pref_automaticUpdates"
        android:entries="@array/pref_automaticUpdates_entries"
        android:entryValues="@array/pref_automaticUpdates_entries"
        android:summary="@string/pref_automaticUpdates_default"
        android:defaultValue="@string/pref_automaticUpdates_default" />   
   <ListPreference
        android:dependency="pref_hostName"
        android:key="pref_summaryScope"
        android:title="@string/pref_summaryScope"
        android:dialogTitle="@string/pref_summaryScope"
        android:entries="@array/pref_summaryScope_entries"
        android:entryValues="@array/pref_summaryScope_entries"
        android:defaultValue="@string/pref_summaryScope_default"
        android:summary="@string/pref_summaryScope_default" />
   <ListPreference
       android:dependency="pref_hostName"
       android:key="pref_notificationSettings"
       android:title="@string/pref_notificationSettings"
       android:dialogTitle="@string/pref_notificationSettings"
       android:entries="@array/pref_notificationSettings_entries"
       android:entryValues="@array/pref_notificationSettings_entries"
       android:defaultValue="@string/pref_notificationSettings_default"
       android:summary="@string/pref_notificationSettings_default" />
   <EditTextPreference
       android:key="pref_hostName"
       android:title="@string/pref_hostName"
       android:summary="@string/pref_hostName_default"
       android:dialogTitle="Enter host address in the box" />
</PreferenceScreen>
