<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.on.oicr.pde.seqprodreporter.ReporterActivity" >
	<item
	    android:id="@+id/action_refresh"
	    android:icon="@drawable/ic_action_refresh"
	    android:title="@string/action_refresh"
	    app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="ca.on.oicr.pde.seqprodreporter.SeqprodSearchView"
        app:showAsAction="collapseActionView|ifRoom"/>
        <!-- "android.support.v7.widget.SearchView" -->
     <item
        android:id="@+id/stats"
        android:orderInCategory="100"
        android:title="@string/stats"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_by"
        android:orderInCategory="101"
        android:title="@string/sort_by"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
   
</menu>