<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <EditTextPreference
       android:key="pref_hostName"
       android:title="@string/pref_hostName"
       android:summary="@string/pref_hostName_default"
       android:dialogTitle="Enter host address in the box" />
      <ListPreference
        android:dependency="pref_hostName"
        android:key="pref_summaryScope"
        android:title="@string/pref_summaryScope"
        android:dialogTitle="@string/pref_summaryScope"
        android:entries="@array/pref_summaryScope_entries"
        android:entryValues="@array/pref_summaryScope_entries"
        android:defaultValue="@string/pref_summaryScope_default"
        android:summary="@string/pref_summaryScope_default" />
      </PreferenceScreen>